remove extra classes(bug), add TypeWrapper to Statements represantation and check it for existance

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,5 +1,4 @@
 AMBIGUOUS_ATTRIBUTE = Ambiguous attribute '%s'
+CANT_PARSE_DATE = Can't parse date '%s'
 MISMATCH_INPUT = Mismatch input at line %s:%s - '%s'
-NOT_ENOUGH_RIGHTS = Not enough rights for table '%s'
-NO_SUCH_TABLE = Table '%s' doesn't exist
-UNKNOWN_COLUMN = Unknown column '%s'
+TYPE_NOT_EXIST = Type '%s' doesn't exists
