changes with antlr lexer(add cast object, add class static methods call), add inspector base

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,3 +2,4 @@ AMBIGUOUS_ATTRIBUTE = Ambiguous attribute '%s'
 CANT_PARSE_DATE = Can't parse date '%s'
 MISMATCH_INPUT = Mismatch input at line %s:%s - '%s'
 TYPE_NOT_EXIST = Type '%s' doesn't exists
+METHODS_DOESNT_EXISTS = Can't find methods in type. '%s'
