--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,3 +3,17 @@ CANT_PARSE_DATE = Can't parse date '%s'
 MISMATCH_INPUT = Mismatch input at line %s:%s - '%s'
 TYPE_NOT_EXIST = Type '%s' doesn't exists
 METHODS_DOESNT_EXISTS = Can't find methods in type. '%s'
+WRONG_CALL_OBJECT_METHOD = Wrong object method call '%s'
+NO_COLLABLE_STATIC_METHODS = Type '%s' has no static collable methods
+NO_COLLABLE_METHODS = Variable '%s' with type '%s' has no collable methods
+VARIABLE_DOESNT_EXISTS = Variable '%s' doesn't exists
+TYPE_CAST_EXCEPTION = Can't cast to type '%s'
+CANT_PARSE_VARVALUE = Can't parse expression '%s'
+BAD_UNARY_OPERATOR_TYPE = Bad type for binary operator '%s'. \n Excpected '%s', but was found '%s'
+BAD_OPERATOR_TYPES = Bad types for binary operator '%s' \n \u041f\u0435\u0440\u0432\u044b\u0439 \u0442\u0438\u043f: '%s' \n \u0412\u0442\u043e\u0440\u043e\u0439 \u0442\u0438\u043f: '%s'
+INCOMPATIBLE_TYPES = Can't cast type '%s' to type '%s'
+NO_SUITABLE_METHOD_FOUND = No suitable method found. \n Required: '%s' \n Found: '%s'
+TYPE_HAS_NO_STATIC_METHODS_WITH_THIS_NAME = Type '%s' has no static method with name '%s'
+TYPE_HAS_NO_METHODS_WITH_THIS_NAME = Variable '%s' with type '%s' has no method with name '%s'
+NO_SUITABLE_CONSTRUCTORS_FOUND = Type '%s' has no suitable constructors with input parameters (%s)
+NAME_ALREADY_IN_USE = Variable '%s' already reserved (%s) in this context
