--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -17,3 +17,4 @@ TYPE_HAS_NO_STATIC_METHODS_WITH_THIS_NAME = Type '%s' has no static method with 
 TYPE_HAS_NO_METHODS_WITH_THIS_NAME = Variable '%s' with type '%s' has no method with name '%s'
 NO_SUITABLE_CONSTRUCTORS_FOUND = Type '%s' has no suitable constructors with input parameters (%s)
 NAME_ALREADY_IN_USE = Variable '%s' already reserved (%s) in this context
+DUPLICATE_FUNCTION_NAME = Function with name '%s' already exists
