add ReturnOrderInspector and ReturnTypeInspector

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -18,3 +18,6 @@ TYPE_HAS_NO_METHODS_WITH_THIS_NAME = Variable '%s' with type '%s' has no method 
 NO_SUITABLE_CONSTRUCTORS_FOUND = Type '%s' has no suitable constructors with input parameters (%s)
 NAME_ALREADY_IN_USE = Variable '%s' already reserved (%s) in this context
 DUPLICATE_FUNCTION_NAME = Function with name '%s' already exists
+MISS_RETURN_STATEMENT = Missing return statement. Expected type '%s'.
+UNREACHABLE_STATEMENT = Unreachable statement
+WRONG_RETURN_TYPE = Wrong return type \n Required: '%s' \n Found: '%s'
