add Continue/Break inspector

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -21,3 +21,4 @@ DUPLICATE_FUNCTION_NAME = Function with name '%s' already exists
 MISS_RETURN_STATEMENT = Missing return statement. Expected type '%s'.
 UNREACHABLE_STATEMENT = Unreachable statement
 WRONG_RETURN_TYPE = Wrong return type \n Required: '%s' \n Found: '%s'
+ENDPOINT_OUT_OF_CONTEXT = Using endpoint '%s' out of context
