add Eq,PlusEq,MinusEq statements inspector. add getAllMethods and getAllStaticMethods for types, some fixes with call statement

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,3 +22,4 @@ MISS_RETURN_STATEMENT = Missing return statement. Expected type '%s'.
 UNREACHABLE_STATEMENT = Unreachable statement
 WRONG_RETURN_TYPE = Wrong return type \n Required: '%s' \n Found: '%s'
 ENDPOINT_OUT_OF_CONTEXT = Using endpoint '%s' out of context
+OPERATOR_DOESNT_SUPPORT_TYPE = Operator '%s' doesn't support type '%s'
