add registering TypeWrapper by TypeImpl, add calling inner methods

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -23,3 +23,5 @@ UNREACHABLE_STATEMENT = Unreachable statement
 WRONG_RETURN_TYPE = Wrong return type \n Required: '%s' \n Found: '%s'
 ENDPOINT_OUT_OF_CONTEXT = Using endpoint '%s' out of context
 OPERATOR_DOESNT_SUPPORT_TYPE = Operator '%s' doesn't support type '%s'
+FUNCTION_DOESNT_EXISTS = Function '%s' doens't exists
+TYPE_ALREADY_EXISTS = Type with name '%s' already exists
