add Injecting to java translated code for System types only

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -28,3 +28,4 @@ TYPE_ALREADY_EXISTS = Type with name '%s' already exists
 VARARGS_DOESNT_SUPPORT =  method '%s' by class '%s' doesn't support varargs  
 PRIMITVE_ARRAYS_DOESNT_SUPPORT =  method '%s' by class '%s' doesn't support primitive arrays
 RUNTIME_TYPE_LOAD_EXCEPTION = Exception while loading class '%s'. Only class with 1 extended class or 1 interfaces supported
+THIS_TYPE_CANT_BE_A_SYSTEM = Type '%s' can't be define as a system
