--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,6 @@
 AMBIGUOUS_ATTRIBUTE = Ambiguous attribute '%s'
 CANT_PARSE_DATE = Can't parse date '%s'
-MISMATCH_INPUT = Mismatch input at line %s:%s - '%s'
+MISMATCH_INPUT = Mismatch input at line %s:%s - '%s'. \n Expected: %s
 TYPE_NOT_EXIST = Type '%s' doesn't exists
 METHODS_DOESNT_EXISTS = Can't find methods in type. '%s'
 WRONG_CALL_OBJECT_METHOD = Wrong object method call '%s'
