add overriding inspector for check parent abstract methods realization

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -29,3 +29,5 @@ VARARGS_DOESNT_SUPPORT =  method '%s' by class '%s' doesn't support varargs
 PRIMITVE_ARRAYS_DOESNT_SUPPORT =  method '%s' by class '%s' doesn't support primitive arrays
 RUNTIME_TYPE_LOAD_EXCEPTION = Exception while loading class '%s'. Only class with 1 extended class or 1 interfaces supported
 THIS_TYPE_CANT_BE_A_SYSTEM = Type '%s' can't be define as a system
+REQUIRED_METHODS_DOESNT_EXISTS = Required method(s) \n%s
+CANT_OVERRIDE_THIS_TYPE = Type '%s' can't be parent cuase has some methods that not supported ('%s')
